--- a/duchamp_reader/templates/pages/artiste_main.html
+++ b/duchamp_reader/templates/pages/artiste_main.html
@@ -1,1 +1,79 @@
-<h1>hi</h1>
+{% extends "conteneur.html" %}
+
+{% block titre %}
+    {% if ville %}| {{nomination.artiste.full}} {% endif %}
+{% endblock %}
+
+<!-- {% if nomination.artiste.genre == "F" %}{% elif nomination.artiste.genre == "A" %}{% else %}{% endif %} -->
+
+{% block corps %}
+    {% if nomination and represente %}
+        <h1>{{nomination.artiste.full}}</h1>
+
+        <!-- corps du texte -->
+        <h2>Nomination</h2>
+            <p>{{nomination.artiste.full}} a été
+                <!-- lauréat ou nominé.e -->
+                {% if nomination.laureat == 1 %}
+                    {% if nomination.artiste.genre == "F" %}lauréate{% elif nomination.artiste.genre == "A" %}lauréat.e{% else %}lauréat{% endif %} du
+                {% else %}
+                    {% if nomination.artiste.genre == "F" %}nominée{% elif nomination.artiste.genre == "A" %}nominé.e{% else %}nominé{% endif %} au
+                {% endif %}
+
+                <!-- année de nomination et autres nominé.e.s -->
+                prix Marcel Duchamp en {{nomination.annee}}.
+                {% if nominations_all|length > 1 %}La même année ont été nominé.e.s :</p>
+                    <ul>
+                        {% for n in nominations_all %}
+                            {% if n.artiste.full != nomination.artiste.full %}
+                                <li><a href="{{ url_for('artiste_main', id_artiste=n.id_artiste) }}">{{n.artiste.full}}</a></li>
+                            {% endif %}
+                        {% endfor %}
+                    </ul>
+                {% else %}Il n'y a pas eu d'autres nominé.e.s cette année là.</p>{% endif %}
+
+                <!-- nom du / de la lauréat.e de cette année là -->
+                {% if nomination.laureat != 1 %}
+                    <p>Cette année,
+                    {% for n in nominations_all %}
+                        {% if n.laureat == 1%}
+                            {% if n.artiste.genre == "F" %}la lauréate{% elif n.artiste.genre == "A" %}le/la lauréat.e{% else %}le lauréat{% endif %}
+                            a été <a href="{{ url_for('artiste_main', id_artiste=n.id_artiste) }}">{{n.artiste.full}}</a>.
+                        {% endif %}
+                    {% endfor %}
+                    </p>
+                {% endif %}
+
+        <h2>À propos de l'artiste</h2>
+        <!-- année et ville de naissance -->
+        <p>{{nomination.artiste.full}} est
+            {% if nomination.artiste.genre == "F" %}née {% elif nomination.artiste.genre == "A" %}né.e {% else %}né {% endif %}
+            en {{nomination.artiste.annee_naissance}} à <a href="{{ url_for('ville_main', id_ville=nomination.artiste.id_ville_naissance) }}">
+                {{nomination.artiste.ville_naissance.nom}}</a>
+            et habite à <a href="{{ url_for('ville_main', id_ville=nomination.artiste.id_ville_residence) }}">
+                {{nomination.artiste.ville_residence.nom}}</a>.
+        </p>
+
+        <!-- galeries représentant l'artiste -->
+        <p>{% if nomination.artiste.genre == "F" %}Elle {% elif nomination.artiste.genre == "A" %}Iel {% else %}Il {% endif %}
+            est {% if nomination.artiste.genre == "F" %}représentée {% elif nomination.artiste.genre == "A" %}représenté.e {% else %}représenté {% endif %} par
+            {% if represente|length > 1 %}
+                les galeries :
+                <ul>
+                    {% for r in represente %}
+                        <li><a href="{{ url_for('galerie_main', id_galerie=r.id_galerie) }}">{{r.galerie.nom}}</a></li>
+                    {% endfor %}
+                </ul>
+            {% else %} la galerie {% for r in represente %}<a href="{{ url_for('galerie_main', id_galerie=r.id_galerie) }}">{{r.galerie.nom}}</a>{% endfor %}.
+            {% endif %}
+
+        <!-- cartes -->
+        {% if carte %}
+            <iframe src="{{url_for('carte', id=ville.id)}}"></iframe>
+        {% endif %}
+
+    {% else %}
+        <p>La base de données est en cours de constitution</p>
+    {% endif %}
+    <p><a href="{{url_for('accueil')}}">Accueil</a></p>
+{% endblock %}
