--- a/duchamp_reader/static/css/bootstrap.css
+++ b/duchamp_reader/static/css/bootstrap.css
@@ -741,9 +741,14 @@ progress {
   flex: 1 0 0%;
 }
 
-.col iframe {
+.col .iframeartiste {
   width: 100%;
-  height: 120%;
+  height: 90%;
+}
+
+.col .iframeville {
+  width: 100%;
+  height: 150%;
 }
 
 .row-cols-auto > * {
