--- a/duchamp_reader/static/css/bootstrap.css
+++ b/duchamp_reader/static/css/bootstrap.css
@@ -743,7 +743,7 @@ progress {
 
 .col .iframeartiste {
   width: 100%;
-  height: 90%;
+  min-height: 700px;
 }
 
 .col .iframeville {
@@ -11443,6 +11443,10 @@ a[data-toggle="collapse"] {
 #sidebar .active > a {
   font-weight: bold;
   color: var(--custom-blue-bg);
+}
+
+#sidebar .active > a:hover {
+  color: var(--custom-light-pink);
 }
 
 #sidebarAccueil {
