--- a/duchamp_reader/static/css/bootstrap.css
+++ b/duchamp_reader/static/css/bootstrap.css
@@ -27,7 +27,9 @@
  * .btn-outline-info:hover : modification des couleurs
  * .navbar + * : ajout d'une règle pour que les éléments soient pas mangés par le navbar
  * .navbar + .hero : ajout d'une règle pour que le hero soit pas mangé par le navbar
- * .col iframe : création d'une règle pour les cartes embedded
+ * .col iframeartiste : création d'une règle pour les cartes embedded
+ * .col iframeville : création d'une règle pour les cartes embedded
+ * .col iframegalerie : création d'une règle pour les cartes embedded
  * .wrapper : création de règles pour le sidebar
  * #sidebar : création de règles pour le sidebar (avec plein d'autres règles en dessous)
  * a[data-toggle="collapse"] : création de règles pour le sidebar
@@ -742,6 +744,11 @@ progress {
 }
 
 .col .iframeartiste {
+  width: 100%;
+  min-height: 700px;
+}
+
+.col .iframegalerie {
   width: 100%;
   min-height: 700px;
 }
@@ -4123,7 +4130,6 @@ textarea.form-control-lg {
 .navbar-brand {
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
-  margin-right: 1rem;
   font-size: 1.25rem;
   text-decoration: none;
   white-space: nowrap;
