--- a/duchamp_reader/templates/conteneur.html
+++ b/duchamp_reader/templates/conteneur.html
@@ -114,6 +114,11 @@
                                 À propos
                             </a>
                         </li>
+                        <li class="active">
+                            <a href="https://github.com/paulhectork/tnah2021_python_duchamp_reader">
+                                Code source (Github)
+                            </a>
+                        </li>
                     </ul>
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" id="sidebarFermer">Fermer</a>
                 </nav>
@@ -154,15 +159,5 @@
                     hero.setAttribute("style", "margin-left: auto;");
                 };
             </script>
-
-                <!--
-                $(document).ready(function () {
-
-                    $('#sidebarCollapse').on('click', function () {
-                        $('#sidebar').toggleClass('active');
-                    });
-
-                });
-                -->
     </body>
 </html>
