--- a/duchamp_reader/templates/pages/nomination_index.html
+++ b/duchamp_reader/templates/pages/nomination_index.html
@@ -68,4 +68,10 @@
             </ul>
         </nav>
     {% endif %}
+
+    <!-- footer -->
+    <div class="basdepage">
+        <a class="btn" href="{{url_for('accueil')}}">Accueil</a>
+    </div>
+
 {% endblock %}
