--- a/duchamp_reader/templates/pages/recherche_results.html
+++ b/duchamp_reader/templates/pages/recherche_results.html
@@ -74,4 +74,9 @@
         <p>Votre recherche n'a pas retourné de résultat.</p>
     {% endif %}
 
+    <!-- footer -->
+    <div class="basdepage">
+        <a class="btn" href="{{url_for('accueil')}}">Accueil</a>
+    </div>
+
 {% endblock %}
