--- a/duchamp_reader/templates/pages/about.html
+++ b/duchamp_reader/templates/pages/about.html
@@ -17,7 +17,6 @@
         <!-- là au niveau de mon architecture de site, je m'oriente vers un truc avec 2 pages pour chaque type de données: une page avec la liste de toutes les entrées pour ce type de données (artiste...)
             et une page pour une entrée en particulier ; je vois pas ça être dur, mais il faut le garder en tête -->
         <dt><strong>Artistes</strong></dt><dd>les artistes nominé.e.s au prix Marcel Duchamp</dd>
-        <dt><strong>Prix</strong></dt><dd>découvrir les différentes éditions du prix Marcel Duchamp</dd>
         <dt><strong>Nomination</strong></dt><dd>la nomination de chaque artiste au prix Marcel Duchamp</dd>
         <!-- dans accueil.html, je parle d'une page 'nomination', qui recense les nominations au prix, et pas les éditions ; que faire ? faire une page nomination en plus ou remplacer nomination par prix -->
         <dt><strong>Galeries</strong></dt><dd>les galeries représentant les nominé.es</dd>
@@ -25,4 +24,11 @@
         <dt><strong>Thèmes</strong></dt><dd>les thèmes sur lesquels portent les nominations au prix Marcel Duchamp</dd>
         <dt><strong>Le prix Marcel Duchamp en statistiques</strong></dt><dd>découvrir des statistiques sur le prix Marcel Duchamp</dd>
     </dl>
+
+    <p>Le code source du site est disponible sur <a href="https://github.com/paulhectork/tnah2021_python_duchamp_reader">Github</a></p>
+
+    <!-- footer -->
+    <div class="basdepage">
+        <a class="btn" href="{{url_for('accueil')}}">Accueil</a>
+    </div>
 {% endblock %}
