--- a/duchamp_reader/templates/pages/ville_main.html
+++ b/duchamp_reader/templates/pages/ville_main.html
@@ -17,5 +17,10 @@
     {% else %}
         <p>La base de données est en cours de constitution</p>
     {% endif %}
-    <p><a href="{{url_for('accueil')}}">Accueil</a></p>
+
+    <!-- footer -->
+    <div class="basdepage">
+        <a class="btn" href="{{url_for('accueil')}}">Accueil</a>
+        <a class="btn" href="{{url_for('ville_index')}}">Index des villes</a>
+    </div>
 {% endblock %}
