--- a/duchamp_reader/templates/conteneur.html
+++ b/duchamp_reader/templates/conteneur.html
@@ -11,27 +11,41 @@
         <!-- barre de navigation -->
         <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top" id="mainNav">
             <div class="container-fluid">
-            <input class="checkbox" type="checkbox" onclick="collapse()"/>
+                <!-- burger -->
+                <input class="checkbox" type="checkbox" onclick="collapse()"/>
                 <div class="hamburger-lines">
                     <span class="line line1"></span>
                     <span class="line line2"></span>
                     <span class="line line3"></span>
                 </div>
-                <!--
-                <button type="button" id="sidebarCollapse" class="btn btn-info" onclick="collapse()">
-                    <i class="fas fa-bars fa-1x"></i>
-                </button>
-                -->
-            </div>
-            <a class="navbar-brand" href="{{ url_for('accueil') }}">duchamp_reader</a>
-            <form class="form-inline" action="{{url_for('recherche')}}" method="GET">
-                <input class="form-control" name="keyword" type="search" placeholder="Recherche rapide"
-                    aria-label="Recherche">
-                    <button class="btn btn-outline-info" type="submit">Rechercher</button>
-            </form>
-        </nav>
-        <div class="container">
 
+                <!-- logo -->
+                <a class="navbar-brand" href="{{ url_for('accueil') }}">duchamp_reader</a>
+
+                <!-- recherche rapide -->
+                <form class="form-inline" action="{{url_for('recherche')}}" method="GET">
+                    <input class="form-control" name="keyword" type="search" placeholder="Recherche rapide"
+                        aria-label="Recherche">
+                        <button class="btn btn-outline-info" type="submit">Rechercher</button>
+                </form>
+
+                <!-- inscription, connexion, déconnexion -->
+                {% if not current_user.is_authenticated %}
+                    <a href="{{ url_for('connexion') }}">
+                        <button class="btn btn-outline-info">Connexion</button>
+                    </a>
+                    <a href="{{ url_for('inscription') }}">
+                        <button class="btn btn-outline-info">Inscription</button>
+                    </a>
+                {% else %}
+                    <a href="{{ url_for('deconnexion') }}">
+                        <button class="btn btn-outline-info">Déconnexion</button>
+                    </a>
+                {% endif %}
+            </div>
+        </nav>
+
+        <div class="container">
             <!-- recherche -->
             {% block homesearch %}{% endblock %}
 
@@ -125,11 +139,22 @@
             </div>
 
             <!-- corps du texte -->
-                <div class="row">
-                    <div class="col">
-                        {% block corps %}{% endblock %}
-                    </div>
+            <div class="row">
+                <div class="col">
+                    {% block corps %}{% endblock %}
                 </div>
+            </div>
+
+                <!-- flash de tout va bien -->
+                {% with messages = get_flashed_messages(category_filter=['success']) %}
+                    {% if messages %}
+                        <div class="alert-success">
+                            {% for m in messages %}
+                                <p>{{m}}</p>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                {% endwith %}
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
