--- a/duchamp_reader/static/css/bootstrap.css
+++ b/duchamp_reader/static/css/bootstrap.css
@@ -26,9 +26,10 @@
  * .btn-outline-info : modification des couleurs
  * .btn-outline-info:hover : modification des couleurs
  * .navbar + .container > * : ajout d'une règle pour que les éléments soient pas mangés par le navbar
+ * iframe: définiton de margin-top
  * .col iframeartiste : création d'une règle pour les cartes embedded
- * .col iframeville : création d'une règle pour les cartes embedded
- * .col iframegalerie : création d'une règle pour les cartes embedded
+ * .col .iframeville : création d'une règle pour les cartes embedded
+ * .col .iframegalerie : création d'une règle pour les cartes embedded
  * .wrapper : création de règles pour le sidebar
  * #sidebar : création de règles pour le sidebar (avec plein d'autres règles en dessous)
  * a[data-toggle="collapse"] : création de règles pour le sidebar
@@ -39,7 +40,8 @@
  * .alert-success: modification des règles de messages de tout va bien
  * .alert-danger: modification des règles de message d'erreur
  * .alert-danger li : création d'une règle pour listes dans messages d'erreur
- * .form-group : ajout de marges entre les barres du formulaires
+ * .form-group : ajout de marges entre les barres du formulaire
+
 
 
 
@@ -525,6 +527,7 @@ output {
 }
 
 iframe {
+  margin-top: 15px;
   border: 0;
 }
 
@@ -750,20 +753,6 @@ progress {
   flex: 1 0 0%;
 }
 
-.col .iframeartiste {
-  width: 100%;
-  min-height: 700px;
-}
-
-.col .iframegalerie {
-  width: 100%;
-  min-height: 700px;
-}
-
-.col .iframeville {
-  width: 100%;
-  height: 150%;
-}
 
 .row-cols-auto > * {
   flex: 0 0 auto;
@@ -4123,7 +4112,7 @@ textarea.form-control-lg {
   height: 70px !important;
 }
 
-.navbar + .container > * {
+.navbar + .container {
   margin-top: 70px;
 }
 
@@ -11396,43 +11385,11 @@ textarea.form-control-lg {
   }
 }
 
-/* sidebar menu - bootstrap
-.wrapper {
-  display: flex;
+/* iframes */
+.iframe {
   width: 100%;
+  min-height: 80vh;
 }
-
-#sidebar {
-  min-width: 250px;
-  max-width: 250px;
-  min-height: 100vh;
-}
-
-#sidebar.active {
-  margin-left: -250px;
-}
-
-a[data-toggle="collapse"] {
-  position: relative;
-}
-
-.dropdown-toggle::after {
-  !!! display: block; !!!
-  position: absolute;
-  top: 50%;
-  !!! right: 20px; !!!
-  transform: translateY(-50%);
-}
-
-@media (max-width: 768px) {
-  #sidebar {
-    margin-left: -250px;
-  }
-  #sidebar.active {
-    margin-left: 0;
-  }
-}
-*/
 
 /* sidebar custom*/
 .wrapper {
@@ -11548,15 +11505,24 @@ a[data-toggle="collapse"] {
 
 .navbar .hamburger-lines .line1 {
   transform-origin: 0% 0%;
+  -webkit-transition: transform 0.4s ease-in-out;
+  -moz-transition: transform 0.4s ease-in-out;
+  -o-transition: transform 0.4s ease-in-out;
   transition: transform 0.4s ease-in-out;
 }
 
 .navbar .hamburger-lines .line2 {
+  -webkit-transition: transform 0.2s ease-in-out;
+  -moz-transition: transform 0.2s ease-in-out;
+  -o-transition: transform 0.2s ease-in-out;
   transition: transform 0.2s ease-in-out;
 }
 
 .navbar .hamburger-lines .line3 {
   transform-origin: 0% 100%;
+  -webkit-transition: transform 0.4s ease-in-out;
+  -moz-transition: transform 0.4s ease-in-out;
+  -o-transition: transform 0.4s ease-in-out;
   transition: transform 0.4s ease-in-out;
 }
 
@@ -11590,5 +11556,57 @@ a[data-toggle="collapse"] {
   border-color: var(--custom-plum);
 }
 
+/* slideshow */
+#slider {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 75vh;
+  max-width: 100%;
+  margin-bottom: 5vh;
+}
+
+.slides {
+  position: relative;
+  list-style-type: none;
+}
+
+.slide {
+  position: absolute;
+  max-width: 100%;
+  max-height: 70vh;
+  opacity: 0;
+  z-index: 1;
+  -webkit-transition: opacity 2s;
+  -moz-transition: opacity 2s;
+  -o-transition: opacity 2s;
+  transition: opacity 2s;
+}
+
+.shown {
+  max-width: 100%;
+  max-height: 70vh;
+  opacity: 1;
+  z-index: 2;
+}
+
+.slideshowbtn {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.slideshowbtn .btn {
+  border-color: var(--custom-light-pink);
+  background-color: var(--bs-white);
+  color: var(--custom-plum);
+  margin: 0px 5px 10px 5px;
+}
+
+.slideshowbtn .btn:hover {
+  background-color: var(--custom-plum);
+  color: var(--bs-white);
+}
 
 /*# sourceMappingURL=bootstrap.css.map */
