--- a/duchamp_reader/templates/pages/artiste_index.html
+++ b/duchamp_reader/templates/pages/artiste_index.html
@@ -69,6 +69,7 @@
     <!-- footer -->
     <div class="basdepage">
         <a class="btn" href="{{url_for('accueil')}}">Accueil</a>
+        <a class="btn" href="{{url_for('artiste_add')}}">Ajouter un.e artiste</a>
     </div>
 
 {% endblock %}
