--- a/duchamp_reader/templates/pages/artiste_main.html
+++ b/duchamp_reader/templates/pages/artiste_main.html
@@ -183,6 +183,7 @@
     <!-- footer -->
     <div class="basdepage">
         <a class="btn" href="{{url_for('accueil')}}">Accueil</a>
+        <a class="btn" href="{{url_for('artiste_add')}}">Ajouter un.e artiste</a>
         <a class="btn" href="{{url_for('artiste_index')}}">Index des artistes</a>
     </div>
 
